# TK-Streamer

./: .gitignore  GITHUB_FIXES_SUMMARY.md  README.md  WORKFLOW_UPDATES.md  docker-compose.yml  env.example  fix_ci_yaml.py  fix_python_strings.py  fix_release_yaml.py  fix_yaml.py  start.sh  temp_ci_fix.py  temp_release_fix.py  validate_yaml.py
.githooks/: pre-commit
.github/: ACTIONS_GUIDE.md
.github/workflows/: ci.yml  deploy.yml  maintenance.yml  release.yml
backend/: Dockerfile  README.md  alembic.ini  login_response.json  prestart.sh  pyproject.toml  requirements.txt  start.sh  test_bags.csv  test_template_b.csv
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 19637acabf9d_add_details_price_authenticity_verified_.py  db3aaab9c110_initial_migration.py
backend/app/: __init__.py  backend_pre_start.py  create_test_data.py  initial_data.py  main.py  models.py
backend/app/api/routes/: analytics.py  auth.py  bags.py  csv_upload.py  feedback.py  match.py  missing_bags.py  phrase_map.py  phrase_mappings.py  scripts.py
backend/app/core/: config.py  db.py  deps.py
backend/app/middleware/: security.py
backend/app/services/: csv_import.py  phrase_mapper.py  websocket_manager.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_bags.py
extension/: README.md  background.ts  package.json  popup.tsx  tsconfig.json
extension/contents/: tiktok-watcher.ts
extension/simple-extension/: background.js  content-script.js  manifest.json  popup.html  popup.js
extension/src/: config.ts
frontend/: package.json  start.sh
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Analytics.tsx  Bags.tsx  CSVImport.tsx  Dashboard.tsx  Login.tsx  MissingBags.tsx  PhraseMapping.tsx  Scripts.tsx
nginx/: nginx.conf
teleprompter/: README.md  package.json
teleprompter/src/: main.js  preload.js
teleprompter/src/renderer/: index.html  renderer.js
